--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -8,10 +8,30 @@
   background-color: #2f4050;
   height: 80px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   /* justify-content: center;
     align-items: center; */
 }
-
+.btn-logOut{
+  /* height: 100%; */
+  margin-right: 15px;
+  padding: 5px;
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(247, 85, 85);
+  color: white;
+  display: flex;
+  width: 100px;
+  font-size: 40px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.btn-logOut:hover{
+cursor: pointer;
+background-color: rgb(158, 57, 57);
+}
 .navicon {
   margin-left: 2rem;
   font-size: 2rem;
